deploy-java/web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dhyanio-app-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: your-tls-secret
  backend:
    serviceName: dhyanio-app-service
    servicePort: 8080
